[gd_scene load_steps=9 format=3 uid="uid://bb7xan43dty65"]

[ext_resource type="FontFile" uid="uid://dgypanq7c21xb" path="res://Font/kenvector_future_thin.ttf" id="1_qfwhe"]
[ext_resource type="Script" path="res://main.gd" id="1_w8lfw"]
[ext_resource type="Texture2D" uid="uid://epcbesihjd3p" path="res://PNG/green_button04.png" id="1_weuxi"]
[ext_resource type="Texture2D" uid="uid://by8mmkoqajlj6" path="res://PNG/green_button05.png" id="2_kvf2l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_llpng"]
texture = ExtResource("1_weuxi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r37kf"]
texture = ExtResource("1_weuxi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f0txh"]
texture = ExtResource("2_kvf2l")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_idhbr"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8lfw")

[node name="IncreaseScoreButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -53.0
offset_right = 246.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_qfwhe")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxTexture_llpng")
theme_override_styles/hover = SubResource("StyleBoxTexture_r37kf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f0txh")
theme_override_styles/focus = SubResource("StyleBoxTexture_idhbr")
text = "Increase"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -181.0
offset_right = 181.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_qfwhe")
theme_override_font_sizes/font_size = 75
text = "Score: 0
"

[node name="AimScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.0
offset_top = 68.0
offset_right = 270.0
offset_bottom = 153.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_qfwhe")
theme_override_font_sizes/font_size = 45
text = "Aim score : 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -153.0
offset_right = 252.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_qfwhe")
theme_override_font_sizes/font_size = 75
text = "Time left: 0 s
"

[node name="TimeLeftTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="IncreaseScoreButton" to="." method="_on_increase_score_button_pressed"]
[connection signal="timeout" from="TimeLeftTimer" to="." method="_on_time_left_timer_timeout"]
